Dark mode button bug

--- a/prism-vs.css
+++ b/prism-vs.css
@@ -57,8 +57,17 @@ code[class*="language-"] ::selection {
 pre[class*="language-"] {
   padding: 1em;
   margin: 0.5em 0;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: transparent;
 }
 
 /* Inline code */
