--- a/src/styles/doc.scss
+++ b/src/styles/doc.scss
@@ -6,7 +6,7 @@ body {
   width: 90%;
   max-width: 1100px;
   margin: 4rem auto;
-  min-height: 77vh;
+  min-height: 79vh;
 
   h1,
   h2,
