--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,6 +36,7 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
+  min-height: 92vh;
 }
 
 #cards {
